--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -5,5 +5,10 @@
 	background: blue;
 	img {
 		margin: 20px 20px 20px 20px;
+		width: 40px;
+        height: 40px;
 	}
+    p {
+        color: white;
+    }
 }
