--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -1,5 +1,5 @@
 <div id="navbar">
-    <img src="https://res.cloudinary.com/dee7vtyid/image/upload/v1611738144/unalremzi/unalremzilogosquare_wufr7n.png" alt="logo">
+    <img src="../img/pngwing.com.png" alt="logo">
     <p>Danisan Takip</p>
 </div>
 <main id="main">
