--- a/public/views/partials/header.hbs
+++ b/public/views/partials/header.hbs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{#each javascript}}
+    <script defer src="../../js/{{this}}"></script>
+    {{/each}}
     {{#each css}}
     <link rel="stylesheet" href="../../css/{{this}}" type='text/css' />
     {{/each}}
@@ -12,3 +15,4 @@
 </head>
 
 <body>
+   
