--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -8,11 +8,11 @@
 <main id="main">
     <section id="section-a">
         <div class="form-container">
-            <div class="login-header">{{loginHeader}}</div>
+            <div class="login-header">{{mainHeader}}</div>
             <form class="form-login">
                 <input type="email" name="email" placeholder="Email">
                 <input type="password" name="password" placeholder="Password">
-                <input type="submit" value="Login">
+                <button type="submit" class='btn btn-primary'>Login</button>
             </form>
         </div>
     </section>
