--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,9 +1,54 @@
+@import 'variables';
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
+
+
+
+// Link
+
 a {
 	text-decoration: none;
 	color: black;
+}
+
+// Input
+
+input {
+	background: rgba($color: #efefef, $alpha: 1.0);
+}
+
+// Button
+
+.btn {
+	display: inline-block;
+	margin: 20px auto 15px auto;
+	border: none;
+	padding: 15px;
+	width: 80%;
+}
+
+.btn-primary {
+	background: $primary-color;
+	color: $secondary-color;
+}
+
+// Main
+
+#main {
+	min-height: 65vh;
+}
+
+
+// Footer
+#main-footer {
+	background: $primary-color;
+	margin-top: 30px;
+	padding: 30px 20px;
+	text-align: center;
+	color: $secondary-color;
+	font-size: 1.2rem;
 }
