--- a/public/views/register.hbs
+++ b/public/views/register.hbs
@@ -1,1 +1,18 @@
-<h1>register</h1>
+<nav id="navbar">
+    <div class="header"><img src="../img/pngwing.com.png" alt="logo">
+    <p>Danisan Takip</p></div>
+</nav>
+<main id="main">
+    <section id="section-a">
+        <div class="form-container">
+            <div class="login-header">{{mainHeader}}</div>
+            <form class="form-login">
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
+                <input type="password" name="password2" placeholder="Repeat Password">
+                <button type="submit" class='btn btn-primary'>Register</button>
+            </form>
+        </div>
+    </section>
+</main>
