--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,2 +1,30 @@
+<main id="main">
+    <h1>Welcome {{user.name}}</h1>
+    <section id="section-a">
 
-<h1>HELLO</h1>
+        <div class="danisan-container">
+            <table class="danisan-table">
+                <tr>
+                    <th>No</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Yasar</td>
+                    <td>Cakir</td>
+                    <td><a href="#" class="btn btn-primary">Detay</a></td>
+                </tr>
+                {{#each client}}
+                <tr>
+                    <td>{{clientNo}}</td>
+                    <td>{{client.firstName}}</td>
+                    <td>{{client.lastName}}</td>
+                    <td><a href="/clients/{{client.id}}" class="btn btn-primary">Detay</a></td>
+                </tr>
+                {{/each}}
+            </table>
+        </div>
+    </section>
+</main>
