--- a/public/views/client.hbs
+++ b/public/views/client.hbs
@@ -1,1 +1,5 @@
-<h1>Hello</h1>
+<main id="main">
+    <section id="section-a">
+        <h1>Hello {{client.firstName}} {{client.lastName}}</h1>
+    </section>
+</main>
