--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,7 +1,11 @@
 <main id="main">
     <h1>Welcome {{user.name}}</h1>
     <section id="section-a">
-
+<div class="btn-list">
+    <a href="/clients/new" class="btn btn-primary">Add New Client</a>
+    <a href="/calculator/bmi" class="btn btn-primary">BMI Calculator</a>
+    <a href="/calculator/total_energy_need" class="btn btn-primary">Energy Need</a>
+</div>
         <div class="danisan-container">
             <table class="danisan-table">
                 <tr>
