--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -1,5 +1,22 @@
 #main {
 	min-height: 82vh;
+
+	.btn-list {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		margin: 10px;
+		.btn {
+			text-align: center;
+			padding: 5px;
+			margin-left: 8px;
+			&:first-child {
+				margin-left: 0;
+				background: red;
+			}
+		}
+	}
+
 	h1 {
 		text-align: center;
 		margin: 15px 5px;
