--- a/public/views/register.hbs
+++ b/public/views/register.hbs
@@ -6,7 +6,7 @@
     <section id="section-a">
         <div class="form-container">
             <div class="login-header">{{mainHeader}}</div>
-            <form class="form-login">
+            <form class="form-register" method="POST" action="/register">
                 <input type="text" name="name" placeholder="Name">
                 <input type="email" name="email" placeholder="Email">
                 <input type="password" name="password" placeholder="Password">
