--- a/public/views/login.hbs
+++ b/public/views/login.hbs
@@ -3,7 +3,7 @@
         <p>Danisan Takip</p>
     </div>
     <div class="navlink">
-        <a href="#">
+        <a href="/register">
             <p>Register</p>
         </a>
     </div>
