--- a/public/views/register.hbs
+++ b/public/views/register.hbs
@@ -1,6 +1,12 @@
 <nav id="navbar">
     <div class="header"><img src="../img/pngwing.com.png" alt="logo">
-    <p>Danisan Takip</p></div>
+        <p>Danisan Takip</p>
+    </div>
+    <div class="navlink">
+        <a href="/login">
+            <p>Login</p>
+        </a>
+    </div>
 </nav>
 <main id="main">
     <section id="section-a">
