--- a/public/scss/register.scss
+++ b/public/scss/register.scss
@@ -1,12 +1,15 @@
 #navbar {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	background: blue;
 	.header {
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+	}
+	.navlink {
+		margin-right: 20px;
 	}
 	img {
 		margin: 20px 20px 20px 20px;
