--- a/public/views/newclient.hbs
+++ b/public/views/newclient.hbs
@@ -36,7 +36,7 @@
             <p class="name-tag">
                 {{client.firstName}} {{client.lastName}} is added as a new client.
             </p>
-            <a href="/clients/new" class="btn btn-primary">OK</a>
+            <a href={{client.id}} class="btn btn-primary">OK</a>
         </div>
     </section>
     {{/if}}
